# emploi-du-temp

./: .env  .env.new  ARCHITECTURE.md  CLASSGROUPS_ROOMS_API_DOCUMENTATION.md  CLASSGROUPS_ROOMS_API_SUMMARY.md  DEPLOYMENT.md  DOCKER_README.md  IMPLEMENTATION_STATUS.md  NETTOYAGE_EFFECTUE.md  QUICK_START.md  README.md  SERVEUR_FIXE.md  START_SIMPLE.md  SUBJECTS_API_DOCUMENTATION.md  SUBJECTS_API_SUMMARY.md  add_user.py  create_test_user.py  docker-compose.prod.yml  docker-compose.yml  docker-start-simple.ps1  docker-start.ps1  docker-start.sh  environment.example  install_all.ps1  main.py  quick-debug.ps1  quick-start.ps1  quick_start_with_data.ps1  setup.ps1  simple-start.ps1  start-docker.ps1  start_app.py  start_backend_fixed.ps1  start_both.ps1  start_clean.ps1  start_fixed.ps1  start_simple.ps1  start_with_sqlite.ps1  start_with_yarn.ps1  start_working.ps1  (+2 more)
backend/: .coverage  .env  .env.backup  DATABASE_SETUP.md  Dockerfile  Dockerfile.prod  SERVICES_DOCUMENTATION.md  SERVICE_LAYER_ARCHITECTURE.md  TEST_DATA_GUIDE.md  add_sample_data.py  alembic.ini  cleanup_and_test.py  create_simple_user.py  diagnostic_tests.py  pyproject.toml  pytest.ini  recreate_database.py  requirements.txt  school_timetable.db  simple_data.py  test_simple_api.py  verify_database.py
backend/alembic/: env.py
backend/alembic/versions/: 52720f5c6cbb_add_bilingual_support_to_subjects.py  5ba5d89f3cc5_fix_database_structure.py  (+2 more)
backend/app/: __init__.py  main.py
backend/scripts/: README.md  clean_setup.py  fix_env.py  init_db.sql  populate_test_data.py  seed_data.sql  setup.bat  setup.ps1  setup.py  test_env.py
backend/tests/: conftest.py  test_api.py  test_basic.py  test_teachers_api.py
(+146 files in other folders)
